# Lion

./: CMakeLists.txt  readme.md
src/: main.cpp
src/core/: CMakeLists.txt  core.cpp  core.h
src/core/debug/: Logger.h
src/core/debug/Logger/: Logger.cpp  Logger.h
src/core/testCore/: CMakeLists.txt  testCore.cpp  testCore.h
src/core/testCore/debug/: CMakeLists.txt
src/modules/: CMakeLists.txt  module_manager.h
src/modules/datatypes/string/: CMakeLists.txt  string.cpp  string.h
src/modules/is_root/: CMakeLists.txt  root.cpp  root.h
src/modules/linux/: CMakeLists.txt
src/modules/linux/is_root/: root.cpp  root.h
src/modules/linux/math/: math.cpp  math.h
src/modules/linux/string/: string.cpp  string.h
src/modules/linux/username/: username.cpp  username.h
src/modules/math/: CMakeLists.txt  math.cpp  math.h
src/modules/test/: CMakeLists.txt  test_module.cpp  test_module.h
src/modules/username/: CMakeLists.txt  username.cpp  username.h
